--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
 node_modules/
 .npm/
-.env
-.DS_Store
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
-yarn.lock
-
-# Optional:
-dist/
-build/
-coverage/
-tmp/
-out/
+.pnp/
+.pnp.js
